Agregando ejercicios extras falta front y detalles